fix(uci): quiesce SMP helpers before TT mutations